--- a/Frontend/Emoticoach/src/app/pages/metric-selection/metric-selection.page.html
+++ b/Frontend/Emoticoach/src/app/pages/metric-selection/metric-selection.page.html
@@ -6,54 +6,55 @@
       </ion-button>
 
     </ion-buttons>
-    <ion-title>dashboard</ion-title>
+    <ion-title>metric selection</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <ion-grid>
     <ion-row>
-      <ion-col size="12">
-        <ion-icon name="barbell-outline"></ion-icon>
-        <ion-text>
-          <h1>Let's get jacked,
-            <br>Justin!
 
-          </h1>
-        </ion-text>
-      </ion-col>
       <ion-col size="6">
         <ion-card color="danger">
-          <ion-icon name="document-outline"></ion-icon>
+          <ion-icon name="bed-outline"></ion-icon>
             <ion-text>
-              <h2>Log Workout</h2>
+              <h2>Sleep & Water</h2>
             </ion-text>
         </ion-card>
       </ion-col>
 
       <ion-col size="6">
         <ion-card color="success">
-          <ion-icon name="bar-chart-outline"></ion-icon>
+          <ion-icon name="battery-half-outline"></ion-icon>
             <ion-text>
-              <h2>Metrics</h2>
+              <h2>RPE</h2>
             </ion-text>
         </ion-card>
       </ion-col>
 
       <ion-col size="6">
         <ion-card color="secondary">
-          <ion-icon name="cloud-upload-outline"></ion-icon>
+          <ion-icon name="bar-chart-outline"></ion-icon>
             <ion-text>
-              <h2>Upload Data</h2>
+              <h2>Table</h2>
             </ion-text>
         </ion-card>
       </ion-col>
 
       <ion-col size="6">
         <ion-card color="medium">
-          <ion-icon name="log-out-outline"></ion-icon>
+          <ion-icon name="barbell-outline"></ion-icon>
             <ion-text>
-              <h2>Logout</h2>
+              <h2>Workouts</h2>
+            </ion-text>
+        </ion-card>
+      </ion-col>
+
+      <ion-col size="6">
+        <ion-card color="warning" className="center">
+          <ion-icon name="fitness-outline"></ion-icon>
+            <ion-text>
+              <h2>Heartrates</h2>
             </ion-text>
         </ion-card>
       </ion-col>
