--- a/Frontend/Emoticoach/src/app/pages/metric-selection/metric-selection.page.scss
+++ b/Frontend/Emoticoach/src/app/pages/metric-selection/metric-selection.page.scss
@@ -14,6 +14,7 @@ ion-content{
         }
         ion-card{
             text-align: center;
-        }
+            font-size: small;
+          }
     }
 }
