--- a/Frontend/Emoticoach/src/app/pages/home/home.page.scss
+++ b/Frontend/Emoticoach/src/app/pages/home/home.page.scss
@@ -1,18 +1,24 @@
 ion-content{
+    --background : #FAF9F6;
     ion-col{
         text-align:center;
         ion-icon{
             zoom:2.8;
-            padding:5px;
+            padding:3px;
             &:first-child{
                 zoom:3.8;
-                padding:5px;
+                padding:3px;
             }
         }
         h2,h1{
             margin-top:0;
         }
         ion-card{
+            box-shadow: 0 !important;
+            text-align: center;
+            margin-bottom: 0px !important;
+        }
+        ion-item{
             text-align: center;
         }
     }
