--- a/Frontend/Emoticoach/src/app/pages/home/home.page.html
+++ b/Frontend/Emoticoach/src/app/pages/home/home.page.html
@@ -1,61 +1,76 @@
 <ion-header>
-  <ion-toolbar color="danger">
+  <ion-toolbar>
     <ion-buttons slot="start">
       <ion-button expand="block">
-        <ion-icon name="arrow-back"></ion-icon>
+        <ion-icon name="chevron-back-outline"></ion-icon>
       </ion-button>
-
     </ion-buttons>
-    <ion-title>dashboard</ion-title>
+
+    <ion-buttons slot="end">
+      <ion-button expand="block">
+        <ion-icon name="add-circle-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+
+    <ion-title color="success">Today</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <ion-grid>
     <ion-row>
+      <ion-col size="12">    
+      <ion-card color="dark">
+        <ion-card-header color ="secondary" style="font-size: 24px">Squat PR</ion-card-header>
+        <ion-card-content>
+          <ion-list inset="true">
+            <ion-icon name="trophy-outline" color="dark" style="float:left"></ion-icon>
+            <ion-item color="dark">
+              <ion-label>185lbs</ion-label>
+            </ion-item>
+            <ion-item color="dark">
+              <ion-label>15 reps</ion-label>
+            </ion-item>
+          </ion-list>
+        </ion-card-content>
+      </ion-card>
+      </ion-col>
+
+
       <ion-col size="12">
-        <ion-icon name="barbell-outline"></ion-icon>
-        <ion-text>
-          <h1>Let's get jacked,
-            <br>Justin!
-
-          </h1>
-        </ion-text>
-      </ion-col>
-      <ion-col size="6">
-        <ion-card color="danger">
-          <ion-icon name="document-outline"></ion-icon>
-            <ion-text>
-              <h2>Log Workout</h2>
-            </ion-text>
-        </ion-card>
+        <ion-card button="true" color="dark">
+            <ion-icon name="barbell-outline" color="light" style="float:left"></ion-icon>
+        <ion-card-content>
+          <ion-text color="light">
+            <h2 style="font-size:18px">Log a new workout</h2>
+            <h3 style="font-size:16px" style="color: medium">Begin a new workout</h3>
+          </ion-text>
+        </ion-card-content>
+          </ion-card>
       </ion-col>
 
-      <ion-col size="6">
-        <ion-card color="success">
-          <ion-icon name="bar-chart-outline"></ion-icon>
-            <ion-text>
-              <h2>Metrics</h2>
-            </ion-text>
-        </ion-card>
+      <ion-col size="12">
+        <ion-card button="true" color="dark">
+            <ion-icon name="walk-outline" color="light" style="float:left"></ion-icon>
+        <ion-card-content>
+          <ion-text color="light">
+            <h2 style="font-size:18px">Rate of perceived effort</h2>
+            <h3 style="font-size:16px" style="color: medium">View your progress</h3>
+          </ion-text>
+        </ion-card-content>
+          </ion-card>
       </ion-col>
 
-      <ion-col size="6">
-        <ion-card color="secondary">
-          <ion-icon name="cloud-upload-outline"></ion-icon>
-            <ion-text>
-              <h2>Upload Data</h2>
-            </ion-text>
-        </ion-card>
-      </ion-col>
-
-      <ion-col size="6">
-        <ion-card color="medium">
-          <ion-icon name="log-out-outline"></ion-icon>
-            <ion-text>
-              <h2>Logout</h2>
-            </ion-text>
-        </ion-card>
+      <ion-col size="12">
+        <ion-card button="true" color="dark">
+            <ion-icon name="heart-outline" color="light" style="float:left"></ion-icon>
+        <ion-card-content>
+          <ion-text color="light">
+            <h2 style="font-size:18px">Heart Rate</h2>
+            <h3 style="font-size:16px" style="color: medium">View your data</h3>
+          </ion-text>
+        </ion-card-content>
+          </ion-card>
       </ion-col>
 
     </ion-row>
