t1011 : created the workout log page and the log workout form page

--- a/Frontend/Emoticoach/src/app/pages/log-workout/exercise/exercise-set/exercise-set.component.html
+++ b/Frontend/Emoticoach/src/app/pages/log-workout/exercise/exercise-set/exercise-set.component.html
@@ -9,7 +9,7 @@
         </ion-col>
         <ion-col>
           <ion-item>
-            <ion-icon slot="start" name="calendar-outline"></ion-icon>
+            <ion-icon slot="start" name="timer-outline"></ion-icon>
             <ion-input [clearOnEdit]="true" type="number" placeholder="Mins"></ion-input>
           </ion-item>
         </ion-col>
@@ -17,13 +17,13 @@
       <ion-row>
         <ion-col>
           <ion-item>
-            <ion-icon slot="start" name="calendar-outline"></ion-icon>
+            <ion-icon slot="start" name="barbell-outline"></ion-icon>
             <ion-input [clearOnEdit]="true" type="number" placeholder="Lbs"></ion-input>
           </ion-item>
         </ion-col>
         <ion-col>
           <ion-item>
-            <ion-icon slot="start" name="calendar-outline"></ion-icon>
+            <ion-icon slot="start" name="walk-outline"></ion-icon>
             <ion-input [clearOnEdit]="true" type="number" placeholder="RPE"></ion-input>
           </ion-item>
         </ion-col>
