--- a/Frontend/Emoticoach/src/app/pages/home/home.page.html
+++ b/Frontend/Emoticoach/src/app/pages/home/home.page.html
@@ -62,7 +62,7 @@
       </ion-col>
 
       <ion-col size="12">
-        <ion-card button="true" color="dark">
+        <ion-card button="true" color="dark" (click)="graphHR()">
             <ion-icon name="heart-outline" color="light" style="float:left"></ion-icon>
         <ion-card-content>
           <ion-text color="light">
