Home, teams, and affiliations page updated

--- a/Frontend/Emoticoach/src/app/pages/home/home.page.html
+++ b/Frontend/Emoticoach/src/app/pages/home/home.page.html
@@ -21,7 +21,7 @@
     <ion-row>
       <ion-col size="12">    
       <ion-card color="dark">
-        <ion-card-header color ="secondary" style="font-size: 24px">Squat PR</ion-card-header>
+        <ion-card-header color ="primary" style="font-size: 24px">Squat PR</ion-card-header>
         <ion-card-content>
           <ion-list inset="true">
             <ion-icon name="trophy-outline" color="dark" style="float:left"></ion-icon>
