--- a/backend/website/templates/website/affiliations.html
+++ b/backend/website/templates/website/affiliations.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 <!-- Our affiliations -->
-<p class="h1 text-center pt-5 pb-2">Our Affilications</p>
+<p class="h1 text-center pt-5 pb-2">Our Affiliations</p>
 
 <div class="row pl-3 pt-2">
     <div class="col-md-3"></div>
@@ -36,7 +36,7 @@
             </p> 
         </div>
         <div class="col-md-4">
-            <p class="h3">Dave</p>
+            <p class="h3">Dr. David Feil-Seifer</p>
             <img src="https://cdn.pixabay.com/photo/2014/04/03/10/54/smiley-311701_1280.png" class="img-thumbnail rounded-circle w-50" alt="Chad">
             <p>
                 Description goes here Lorem ipsum dolor sit 
@@ -45,7 +45,7 @@
             </p> 
         </div>
         <div class="col-md-4">
-            <p class="h3">Dave</p>
+            <p class="h3">Vinh Le</p>
             <img src="https://cdn.pixabay.com/photo/2014/04/03/10/54/smiley-311701_1280.png" class="img-thumbnail rounded-circle w-50" alt="Chad">
             <p>
                 Description goes here Lorem ipsum dolor sit 
@@ -61,12 +61,10 @@
     <div class="row pt-3 text-center">
         <div class="col-md-4"></div>
         <div class="col-md-4">
-            <p class="h3">Sean Montgomery</p>
+            <p class="h3">Dr. Sean Montgomery</p>
             <img src="https://cdn.pixabay.com/photo/2014/04/03/10/54/smiley-311701_1280.png" class="img-thumbnail rounded-circle w-50" alt="Chad">
             <p>
-                Description goes here Lorem ipsum dolor sit 
-                amet consectetur adipisicing elit. Minus, 
-                exercitationem.
+                Founder of Future Connected Labs and Creator of EmotiBit.
             </p> 
         </div>
         <div class="col-md-4"></div>
