--- a/backend/website/templates/website/home.html
+++ b/backend/website/templates/website/home.html
@@ -14,10 +14,12 @@
     <div class="row pl-3 pt-2">
         <div class="col-md-6">
           <p>
-            Short Project Description Lorem, ipsum dolor sit amet consectetur 
-            adipisicing elit. Non explicabo quae suscipit quas earum dignissimos, 
-            molestias cum accusantium amet sunt est, dolore eveniet sapiente voluptatibus 
-            dicta exercitationem id illo ratione.
+            EmotiCoach is a web application that optimizes user health using machine learning and data collected from the EmotiBit device. It suggests lifestyle advice based on collected data to improve physical performance.
+            The EmotiBit device is a transparent, open-source wearable computer that uses affective computing and open-source technology. EmotiCoach addresses the need for more affordable and accessible solutions in affective 
+            computing and bridges the gap between luxury health trackers and easy-to-use software. This document outlines the responsibilities of each team member in the development of the EmotiCoach project, from concept to implementation and testing.
+            The main goal of the EmotiCoach project is to develop a comprehensive health and fitness app that works in conjunction with the EmotiBit device to provide users with the most optimal tips and advice. The app will analyze emotional and physiological data gathered by the EmotiBit device, predict the outcome of a user's workout, and offer recommendations for lifestyle changes.
+            The intended users of the EmotiCoach project are individuals who are interested in improving their health and fitness performance. This project will be beneficial to them as it offers an affordable and open-source alternative to expensive health trackers. The app will provide users with a clear, easy-to-read analysis of their emotional, physiological, and movement data and make recommendations based on this data, which will help them achieve their health and fitness goals.
+            The main functionality of the product will include the ability to capture and record live data, visualize emotional, physiological, and movement data, and with machine learning, create personalized recommendations to the user on the data. The app will act as a live journal for users to track their progress.
           </p>
         </div>
     </div>
