--- a/backend/website/templates/website/team.html
+++ b/backend/website/templates/website/team.html
@@ -28,45 +28,35 @@
         <p class="h3">Chad Sherf</p>
         <img src="https://cdn.pixabay.com/photo/2014/04/03/10/54/smiley-311701_1280.png" class="img-thumbnail rounded-circle w-75" alt="Chad">
         <p>
-            Description goes here Lorem ipsum dolor sit 
-            amet consectetur adipisicing elit. Minus, 
-            exercitationem.
+            3rd year CSE Major
         </p> 
     </div>
     <div class="col-md-2 text-center">
         <p class="h3">Kobe Maristela</p>
         <img src="https://cdn.pixabay.com/photo/2021/04/17/00/34/drawing-6184767_1280.jpg" class="img-thumbnail rounded-circle w-75" alt="Kobe"> 
         <p>
-            Description goes here Lorem ipsum dolor sit 
-            amet consectetur adipisicing elit. Minus, 
-            exercitationem.
+            4th year CSE Major
         </p> 
     </div>
     <div class="col-md-2 text-center">
         <p class="h3">Jaemin Lee</p>
         <img src="https://cdn.pixabay.com/photo/2014/03/24/13/40/dumbbells-293955_1280.png" class="img-thumbnail rounded-circle w-75" alt="Jaemin"> 
         <p>
-            Description goes here Lorem ipsum dolor sit 
-            amet consectetur adipisicing elit. Minus, 
-            exercitationem.
+            4th year CSE Major
         </p> 
     </div>
     <div class="col-md-2 text-center">
         <p class="h3">Justin Fan</p>
         <img src="https://cdn.pixabay.com/photo/2022/06/21/11/42/clown-7275698_1280.png" class="img-thumbnail rounded-circle w-75" alt="Justin"> 
         <p>
-            Description goes here Lorem ipsum dolor sit 
-            amet consectetur adipisicing elit. Minus, 
-            exercitationem.
+            4th year CSE Major
         </p> 
     </div>
     <div class="col-md-2 text-center">
         <p class="h3">Blong Vang</p>
         <img src="https://cdn.pixabay.com/photo/2021/03/02/17/28/pixel-6063274_1280.png" class="img-thumbnail rounded-circle w-75" alt="Blong"> 
         <p>
-            Description goes here Lorem ipsum dolor sit 
-            amet consectetur adipisicing elit. Minus, 
-            exercitationem.
+            4th year CSE Major
         </p> 
     </div>
     <div class="col-md-1"></div>
