hotfix 1025 : added links and info to the resource page

--- a/backend/website/templates/website/resources.html
+++ b/backend/website/templates/website/resources.html
@@ -1,7 +1,7 @@
 {% extends "website/base.html" %}
 
 {% block title %}
-  Resources
+Resources
 {% endblock %}
 
 {% block content %}
@@ -11,44 +11,43 @@
 <p class="h3 pl-3 pt-4">Books</p>
 <div class="row pl-3 pt-2">
     <div class="col-md-6">
+        <a href="https://www.amazon.com/Hands-Machine-Learning-Scikit-Learn-TensorFlow/dp/1492032646/ref=sr_1_6?crid=HL2ESRD5CPFI&keywords=tensorflow+sklearn&qid=1675818748&s=books&sprefix=tensorflow+sklearn%2Cstripbooks%2C163&sr=1-6&ufe=app_do%3Aamzn1.fos.006c50ae-5d4c-4777-9bc0-4513d670b6bc">Hands-on Machine Learning with Scikit-Learn</a>
         <p>
-        Short Project Description Lorem, ipsum dolor sit amet consectetur 
-        adipisicing elit. Non explicabo quae suscipit quas earum dignissimos, 
-        molestias cum accusantium amet sunt est, dolore eveniet sapiente voluptatibus 
-        dicta exercitationem id illo ratione.
+            A book to help with our goal of having a good model built on good data.
+        </p>
+        <a href="https://www.amazon.com/C-Programming-Modern-Approach-2nd/dp/0393979504"> C Programming</a>
+        <p>
+            This book is to help with us pushing C to its limit on the Emotibit 
         </p>
     </div>
 </div>
 <p class="h3 pl-3 pt-4">Websites</p>
 <div class="row pl-3 pt-2">
     <div class="col-md-6">
+
+        <a href="https://www.emotibit.com/"> Emotibit</a>
         <p>
-        Short Project Description Lorem, ipsum dolor sit amet consectetur 
-        adipisicing elit. Non explicabo quae suscipit quas earum dignissimos, 
-        molestias cum accusantium amet sunt est, dolore eveniet sapiente voluptatibus 
-        dicta exercitationem id illo ratione.
+            Emotibit is the hardware we are working with.
         </p>
     </div>
 </div>
 <p class="h3 pl-3 pt-4">Articles/Papers</p>
 <div class="row pl-3 pt-2">
     <div class="col-md-6">
+
+        <a href="https://pubmed.ncbi.nlm.nih.gov/31547220/">Wearable-Based Affect Recognition-A Review</a>
         <p>
-        Short Project Description Lorem, ipsum dolor sit amet consectetur 
-        adipisicing elit. Non explicabo quae suscipit quas earum dignissimos, 
-        molestias cum accusantium amet sunt est, dolore eveniet sapiente voluptatibus 
-        dicta exercitationem id illo ratione.
+            This paper goes over affective computing with wearble sensors.
+
         </p>
     </div>
 </div>
 <p class="h3 pl-3 pt-4">News</p>
 <div class="row pl-3 pt-2">
     <div class="col-md-6">
+        <a href="https://www.youtube.com/watch?v=nNhhVE4TjgM"> Nasa using the emotibit</a>
         <p>
-        Short Project Description Lorem, ipsum dolor sit amet consectetur 
-        adipisicing elit. Non explicabo quae suscipit quas earum dignissimos, 
-        molestias cum accusantium amet sunt est, dolore eveniet sapiente voluptatibus 
-        dicta exercitationem id illo ratione.
+            In this video the emotibit is used to stream emotional data in pair with a VR headset at Nasa.
         </p>
     </div>
 </div>
