Hotfix T1025: Updated team description and affiliations.

--- a/backend/website/templates/website/affiliations.html
+++ b/backend/website/templates/website/affiliations.html
@@ -12,12 +12,8 @@
     <div class="col-md-3"></div>
     <div class="col-md-6">
         <p class="text-center pt-3 pb-2">
-            Description about our instructors/class Lorem ipsum, 
-            dolor sit amet consectetur adipisicing elit. 
-            Nihil reprehenderit, ipsam repellendus neque 
-            vero aspernatur, eveniet ipsum ut animi exercitationem 
-            quos quae est maiores molestiae, culpa iusto eligendi. 
-            Velit, incidunt!
+            Our CS 426 Instructors are Dr. David Feil-Seifer, Devrin Lee, and Vinh Le.
+            Our external advisor is Dr. Sean Montgomery.
         </p>
     </div>
     <div class="col-md-3"></div>
@@ -30,27 +26,21 @@
             <p class="h3">Devrin Lee</p>
             <img src="https://cdn.pixabay.com/photo/2014/04/03/10/54/smiley-311701_1280.png" class="img-thumbnail rounded-circle w-50" alt="Devrin">
             <p>
-                Description goes here Lorem ipsum dolor sit 
-                amet consectetur adipisicing elit. Minus, 
-                exercitationem.
+                CS 426 Instructor.
             </p> 
         </div>
         <div class="col-md-4">
             <p class="h3">Dr. David Feil-Seifer</p>
             <img src="https://cdn.pixabay.com/photo/2014/04/03/10/54/smiley-311701_1280.png" class="img-thumbnail rounded-circle w-50" alt="Chad">
             <p>
-                Description goes here Lorem ipsum dolor sit 
-                amet consectetur adipisicing elit. Minus, 
-                exercitationem.
+                CS 426 Instructor.
             </p> 
         </div>
         <div class="col-md-4">
             <p class="h3">Vinh Le</p>
             <img src="https://cdn.pixabay.com/photo/2014/04/03/10/54/smiley-311701_1280.png" class="img-thumbnail rounded-circle w-50" alt="Chad">
             <p>
-                Description goes here Lorem ipsum dolor sit 
-                amet consectetur adipisicing elit. Minus, 
-                exercitationem.
+                CS 426 Teaching Assistant.
             </p> 
         </div>
     </div>
