--- a/backend/website/templates/website/team.html
+++ b/backend/website/templates/website/team.html
@@ -12,12 +12,8 @@
     <div class="col-md-3"></div>
     <div class="col-md-6">
         <p class="text-center pt-3 pb-2">
-            Description about our team including team number and name Lorem ipsum, 
-            dolor sit amet consectetur adipisicing elit. 
-            Nihil reprehenderit, ipsam repellendus neque 
-            vero aspernatur, eveniet ipsum ut animi exercitationem 
-            quos quae est maiores molestiae, culpa iusto eligendi. 
-            Velit, incidunt!
+            We are the Brogrammers! We are Team 16 of CS 426 Senior Projects.
+            We have five amazing members, and here they are:
         </p>
     </div>
     <div class="col-md-3"></div>
