T-1020 : fixed the tabs page and started working on the sessions/workout service

--- a/Frontend/Emoticoach/src/app/pages/log-workout/exercise/exercise-set/exercise-set.component.html
+++ b/Frontend/Emoticoach/src/app/pages/log-workout/exercise/exercise-set/exercise-set.component.html
@@ -1,4 +1,4 @@
-<ion-card-subtitle > {{set}} </ion-card-subtitle>
+<ion-card-subtitle > {{setCount}} </ion-card-subtitle>
     <ion-grid>
       <ion-row>
         <ion-col>
