Updated profile pictures

--- a/backend/website/templates/website/resources.html
+++ b/backend/website/templates/website/resources.html
@@ -45,9 +45,9 @@ Resources
 <p class="h3 pl-3 pt-4">News</p>
 <div class="row pl-3 pt-2">
     <div class="col-md-6">
-        <a href="https://www.youtube.com/watch?v=nNhhVE4TjgM"> Nasa using the emotibit</a>
+        <a href="https://www.youtube.com/watch?v=nNhhVE4TjgM"> NASA using the emotibit</a>
         <p>
-            In this video the emotibit is used to stream emotional data in pair with a VR headset at Nasa.
+            In this video the emotibit is used to stream emotional data in pair with a VR headset at NASA.
         </p>
     </div>
 </div>
