--- a/backend/website/templates/website/affiliations.html
+++ b/backend/website/templates/website/affiliations.html
@@ -24,21 +24,21 @@
     <div class="row pt-3 text-center">
         <div class="col-md-4">
             <p class="h3">Devrin Lee</p>
-            <img src="https://cdn.pixabay.com/photo/2014/04/03/10/54/smiley-311701_1280.png" class="img-thumbnail rounded-circle w-50" alt="Devrin">
+            <img src="https://media.licdn.com/dms/image/C4E03AQGP-WVk-HtN5g/profile-displayphoto-shrink_200_200/0/1517744183493?e=1681344000&v=beta&t=dB2HXWxeBo7OmOdgPSGLLMvX8CgFO72r1DN-jvc6glQ" class="img-thumbnail rounded-circle w-50" alt="Devrin">
             <p>
                 CS 426 Instructor.
             </p> 
         </div>
         <div class="col-md-4">
             <p class="h3">Dr. David Feil-Seifer</p>
-            <img src="https://cdn.pixabay.com/photo/2014/04/03/10/54/smiley-311701_1280.png" class="img-thumbnail rounded-circle w-50" alt="Chad">
+            <img src="https://media.licdn.com/dms/image/C5603AQGYkcUBZ4cBTw/profile-displayphoto-shrink_800_800/0/1517457728255?e=1681344000&v=beta&t=yOyMBp4xJd9Gvc4YMhP7lcpjfjL4Z9QglvpKY9UTp_A" class="img-thumbnail rounded-circle w-50" alt="Chad">
             <p>
                 CS 426 Instructor.
             </p> 
         </div>
         <div class="col-md-4">
             <p class="h3">Vinh Le</p>
-            <img src="https://cdn.pixabay.com/photo/2014/04/03/10/54/smiley-311701_1280.png" class="img-thumbnail rounded-circle w-50" alt="Chad">
+            <img src="https://media.licdn.com/dms/image/D5603AQE-8E1F4MEOhg/profile-displayphoto-shrink_800_800/0/1675767295560?e=1681344000&v=beta&t=C6mQwclQ9r8HO64rF2L8KynDL6qgkDB0uFY2c0DdlO8" class="img-thumbnail rounded-circle w-50" alt="Chad">
             <p>
                 CS 426 Teaching Assistant.
             </p> 
@@ -52,7 +52,7 @@
         <div class="col-md-4"></div>
         <div class="col-md-4">
             <p class="h3">Dr. Sean Montgomery</p>
-            <img src="https://cdn.pixabay.com/photo/2014/04/03/10/54/smiley-311701_1280.png" class="img-thumbnail rounded-circle w-50" alt="Chad">
+            <img src="https://media.licdn.com/dms/image/C4E03AQFEqE1hIvFxRw/profile-displayphoto-shrink_800_800/0/1631140917887?e=1681344000&v=beta&t=xaiKhq_uyCVGS4imqUbzKRRrVuQzy_qTlUSBJk7sqsc" class="img-thumbnail rounded-circle w-50" alt="Chad">
             <p>
                 Founder of Future Connected Labs and Creator of EmotiBit.
             </p> 
