--- a/backend/website/templates/website/team.html
+++ b/backend/website/templates/website/team.html
@@ -22,35 +22,35 @@
     <div class="col-md-1"></div>
     <div class="col-md-2 text-center">
         <p class="h3">Chad Sherf</p>
-        <img src="https://cdn.pixabay.com/photo/2014/04/03/10/54/smiley-311701_1280.png" class="img-thumbnail rounded-circle w-75" alt="Chad">
+        <img src="https://media.licdn.com/dms/image/C4E03AQElyuEidDUciA/profile-displayphoto-shrink_800_800/0/1627482029378?e=1681344000&v=beta&t=hBcMVm-6xfXcM4w1-SRTcnwZis7O7a4Ocrk7XnVNBIc" class="img-thumbnail rounded-circle w-75" alt="Chad">
         <p>
             3rd year CSE Major
         </p> 
     </div>
     <div class="col-md-2 text-center">
         <p class="h3">Kobe Maristela</p>
-        <img src="https://cdn.pixabay.com/photo/2021/04/17/00/34/drawing-6184767_1280.jpg" class="img-thumbnail rounded-circle w-75" alt="Kobe"> 
+        <img src="https://media.licdn.com/dms/image/C5603AQGKQ10RNOMdDw/profile-displayphoto-shrink_800_800/0/1656700526492?e=1681344000&v=beta&t=9Ye8wsyHGsIiKdcOAWKp_N4Ld67geMeh62VpMEhAoRY" class="img-thumbnail rounded-circle w-75" alt="Kobe"> 
         <p>
             4th year CSE Major
         </p> 
     </div>
     <div class="col-md-2 text-center">
         <p class="h3">Jaemin Lee</p>
-        <img src="https://cdn.pixabay.com/photo/2014/03/24/13/40/dumbbells-293955_1280.png" class="img-thumbnail rounded-circle w-75" alt="Jaemin"> 
+        <img src="https://media.licdn.com/dms/image/C5603AQGdLByl0i9h1g/profile-displayphoto-shrink_200_200/0/1615473139186?e=1681344000&v=beta&t=wIInma6r62Bnat7UzpY0Q7vQAigCdFHjAS8wAFUykEM" class="img-thumbnail rounded-circle w-75" alt="Jaemin"> 
         <p>
             4th year CSE Major
         </p> 
     </div>
     <div class="col-md-2 text-center">
         <p class="h3">Justin Fan</p>
-        <img src="https://cdn.pixabay.com/photo/2022/06/21/11/42/clown-7275698_1280.png" class="img-thumbnail rounded-circle w-75" alt="Justin"> 
+        <img src="https://cdn.pixabay.com/photo/2018/10/09/16/04/sport-3735288_960_720.png" class="img-thumbnail rounded-circle w-75" alt="Justin"> 
         <p>
             4th year CSE Major
         </p> 
     </div>
     <div class="col-md-2 text-center">
         <p class="h3">Blong Vang</p>
-        <img src="https://cdn.pixabay.com/photo/2021/03/02/17/28/pixel-6063274_1280.png" class="img-thumbnail rounded-circle w-75" alt="Blong"> 
+        <img src="https://media.licdn.com/dms/image/C5603AQFemv1C9eS9qw/profile-displayphoto-shrink_800_800/0/1631725052556?e=1681344000&v=beta&t=07kBQ-PiX0hAziTApq7NbdlSCSObZwvJtNpyUlEU2tQ" class="img-thumbnail rounded-circle w-75" alt="Blong"> 
         <p>
             4th year CSE Major
         </p> 
