T-1020 : workout service successfully loads JSON from file and can read the activity in the workout component

--- a/Frontend/Emoticoach/src/app/pages/log-workout/exercise/exercise-set/exercise-set.component.html
+++ b/Frontend/Emoticoach/src/app/pages/log-workout/exercise/exercise-set/exercise-set.component.html
@@ -1,32 +1,32 @@
-<ion-card-subtitle > {{setCount}} </ion-card-subtitle>
-    <ion-grid>
-      <ion-row>
-        <ion-col>
-          <ion-item>
-            <ion-icon slot="start" name="calendar-outline"></ion-icon>
-            <ion-input [clearOnEdit]="true" type="number" placeholder="Reps"></ion-input>
-          </ion-item>
-        </ion-col>
-        <ion-col>
-          <ion-item>
-            <ion-icon slot="start" name="timer-outline"></ion-icon>
-            <ion-input [clearOnEdit]="true" type="number" placeholder="Mins"></ion-input>
-          </ion-item>
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col>
-          <ion-item>
-            <ion-icon slot="start" name="barbell-outline"></ion-icon>
-            <ion-input [clearOnEdit]="true" type="number" placeholder="Lbs"></ion-input>
-          </ion-item>
-        </ion-col>
-        <ion-col>
-          <ion-item>
-            <ion-icon slot="start" name="walk-outline"></ion-icon>
-            <ion-input [clearOnEdit]="true" type="number" placeholder="RPE"></ion-input>
-          </ion-item>
-        </ion-col>
-      </ion-row>
-      
-    </ion-grid>
+<ion-grid>
+
+  <ion-row>
+    <ion-col>
+      <ion-item>
+      {{setCount}}
+      </ion-item>
+    </ion-col>
+    <ion-col>
+      <ion-item>
+        <ion-icon size="small" name="calendar-outline"></ion-icon>
+        <ion-input [clearOnEdit]="true" type="number" placeholder="Reps"></ion-input>
+      </ion-item>
+    </ion-col>
+    <ion-col>
+      <ion-item>
+        <ion-icon size="small" name="barbell-outline"></ion-icon>
+        <ion-input [clearOnEdit]="true" type="number" placeholder="Lbs"></ion-input>
+      </ion-item>
+    </ion-col>
+    <ion-col>
+      <ion-item>
+        <ion-icon size="small" name="walk-outline"></ion-icon>
+        <ion-input [clearOnEdit]="true" type="number" placeholder="RPE"></ion-input>
+      </ion-item>
+    </ion-col>
+
+
+
+
+  </ion-row>
+</ion-grid>
