--- a/Frontend/Emoticoach/src/app/pages/log-workout/log-workout.page.html
+++ b/Frontend/Emoticoach/src/app/pages/log-workout/log-workout.page.html
@@ -13,20 +13,17 @@
  
   <app-exercise></app-exercise>
   <ng-container #container></ng-container>
+
   <ion-row>
-      <ion-col></ion-col>
+    <ion-col>
+    </ion-col>
       <ion-col size="auto">
         <ion-button (click)="addNewComponent()">Add Workout</ion-button>
       </ion-col>
-      <ion-col></ion-col>
-    </ion-row>
+      <ion-col>
+      </ion-col>
+  </ion-row>
+  <ion-card *ngFor="let activity of activities">{{activity.name}} </ion-card>
   </ion-list>
 </ion-content>
 
-<!-- This is for a dropdown list generation
-  <ion-item>
-        <ion-select [compareWith]="compareWith" placeholder="Select Workout" (ionChange)="handleChange($event)"
-          interface="popover">
-          <ion-select-option *ngFor="let workout of workouts" [value]="workout">{{ workout.name }}</ion-select-option>
-        </ion-select>
-      </ion-item> -->
