T1026 : added typing for the sessions and activities to the session service and commented out the split plane view

--- a/Frontend/Emoticoach/src/app/pages/workouts-dashboard/workouts-dashboard.page.html
+++ b/Frontend/Emoticoach/src/app/pages/workouts-dashboard/workouts-dashboard.page.html
@@ -13,7 +13,9 @@
 
       
     </ion-item-divider>
-
+    <ion-item *ngFor="let session of sessions; index as i;">
+      {{session.name}}
+    </ion-item>
     <ion-row>
       <ion-col></ion-col>
       <ion-col size="auto">
