--- a/Frontend/Emoticoach/src/app/pages/home/home.page.html
+++ b/Frontend/Emoticoach/src/app/pages/home/home.page.html
@@ -36,67 +36,17 @@
       </ion-card>
       </ion-col>
 
-
       <ion-col size="12">
-        <ion-card button="true" color="dark" (click)="logWorkout()">
-            <ion-icon name="barbell-outline" color="light" style="float:left"></ion-icon>
+        <ion-card *ngFor="let card of homepageCards; let i = index" button="true" color="dark" (click)="logWorkout()">
+            <ion-icon name={{icons[i]}} color="light" style="float:left"></ion-icon>
         <ion-card-content>
           <ion-text color="light">
-            <h2 style="font-size:18px">Log a new workout</h2>
-            <h3 style="font-size:16px" style="color: medium">Begin a new workout</h3>
+            <h2 style="font-size:18px">{{upperText[i]}}</h2>
+            <h3 style="font-size:16px" style="color: medium">{{lowerText[i]}}</h3>
           </ion-text>
         </ion-card-content>
           </ion-card>
       </ion-col>
-
-      <ion-col size="12">
-        <ion-card button="true" color="dark">
-            <ion-icon name="walk-outline" color="light" style="float:left"></ion-icon>
-        <ion-card-content>
-          <ion-text color="light">
-            <h2 style="font-size:18px">Rate of perceived effort</h2>
-            <h3 style="font-size:16px" style="color: medium">View your progress</h3>
-          </ion-text>
-        </ion-card-content>
-          </ion-card>
-      </ion-col>
-
-      <ion-col size="12">
-        <ion-card button="true" color="dark" (click)="graphHR()">
-            <ion-icon name="heart-outline" color="light" style="float:left"></ion-icon>
-        <ion-card-content>
-          <ion-text color="light">
-            <h2 style="font-size:18px">Heart Rate</h2>
-            <h3 style="font-size:16px" style="color: medium">View your data</h3>
-          </ion-text>
-        </ion-card-content>
-          </ion-card>
-      </ion-col>
-
-      <ion-col size="12">
-        <ion-card button="true" color="dark">
-            <ion-icon name="walk-outline" color="light" style="float:left"></ion-icon>
-        <ion-card-content>
-          <ion-text color="light">
-            <h2 style="font-size:18px">Sleep and Water</h2>
-            <h3 style="font-size:16px" style="color: medium">View your data</h3>
-          </ion-text>
-        </ion-card-content>
-          </ion-card>
-      </ion-col>
-
-      <ion-col size="12">
-        <ion-card button="true" color="dark">
-            <ion-icon name="walk-outline" color="light" style="float:left"></ion-icon>
-        <ion-card-content>
-          <ion-text color="light">
-            <h2 style="font-size:18px">Tables</h2>
-            <h3 style="font-size:16px" style="color: medium">View your data</h3>
-          </ion-text>
-        </ion-card-content>
-          </ion-card>
-      </ion-col>
-
     </ion-row>
   </ion-grid>
 </ion-content>
