--- a/Frontend/Emoticoach/src/app/pages/home/home.page.html
+++ b/Frontend/Emoticoach/src/app/pages/home/home.page.html
@@ -37,7 +37,7 @@
       </ion-col>
 
       <ion-col size="12">
-        <ion-card *ngFor="let card of homepageCards; let i = index" button="true" color="dark" (click)="logWorkout()">
+        <ion-card *ngFor="let card of homepageCards; let i = index" button="true" color="dark" routerLink={{routing[i]}} routerLinkActive="active" routerDirection="root">
             <ion-icon name={{icons[i]}} color="light" style="float:left"></ion-icon>
         <ion-card-content>
           <ion-text color="light">
