ran "commit.gpp global"

--- a/Frontend/Emoticoach/src/app/pages/workouts-dashboard/workouts-dashboard.page.html
+++ b/Frontend/Emoticoach/src/app/pages/workouts-dashboard/workouts-dashboard.page.html
@@ -10,7 +10,7 @@
       <ion-item>
         December 12 - December 19
       </ion-item>
-
+<!-- testing if sign works -->
       
     </ion-item-divider>
     <ion-item *ngFor="let session of sessions; index as i;">
