Develope t1026 ionic angular project cleanup (#42)
* T-1020 : fixed the tabs page and started working on the sessions/workout service

* T-1020 : service with base functionality and example json created

* T-1020 : workout service successfully loads JSON from file and can read the activity in the workout component

* T1026 : added typing for the sessions and activities to the session service and commented out the split plane view

* signing my commit

* testing for signing

* ran "commit.gpp global"

--- a/Frontend/Emoticoach/src/app/pages/workouts-dashboard/workouts-dashboard.page.html
+++ b/Frontend/Emoticoach/src/app/pages/workouts-dashboard/workouts-dashboard.page.html
@@ -10,10 +10,12 @@
       <ion-item>
         December 12 - December 19
       </ion-item>
-
+<!-- testing if sign works -->
       
     </ion-item-divider>
-
+    <ion-item *ngFor="let session of sessions; index as i;">
+      {{session.name}}
+    </ion-item>
     <ion-row>
       <ion-col></ion-col>
       <ion-col size="auto">
