Added data passing between parent and child and all data is saved to the session service locally

--- a/Frontend/Emoticoach/src/app/pages/home/home.page.html
+++ b/Frontend/Emoticoach/src/app/pages/home/home.page.html
@@ -1,6 +1,14 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>Emoticoach</ion-title>
+  </ion-toolbar>
+</ion-header>
+<ion-header>
+  <ion-toolbar>
+    <ion-buttons slot="start">
       <ion-button expand="block">
         <ion-icon name="chevron-back-outline"></ion-icon>
       </ion-button>
