--- a/Frontend/Emoticoach/src/app/pages/log-workout/exercise/exercise-set/exercise-set.component.html
+++ b/Frontend/Emoticoach/src/app/pages/log-workout/exercise/exercise-set/exercise-set.component.html
@@ -9,19 +9,37 @@
     <ion-col>
       <ion-item>
         <ion-icon size="small" name="calendar-outline"></ion-icon>
-        <ion-input [clearOnEdit]="true" type="number" placeholder="Reps"></ion-input>
+        <ion-input 
+          [clearOnEdit]="true" 
+          type="number"
+           placeholder="Reps" 
+           [(ngModel)]="set.reps"
+           (ionChange)="updateSet()">
+        </ion-input>
       </ion-item>
     </ion-col>
     <ion-col>
       <ion-item>
         <ion-icon size="small" name="barbell-outline"></ion-icon>
-        <ion-input [clearOnEdit]="true" type="number" placeholder="Lbs"></ion-input>
+        <ion-input 
+          [clearOnEdit]="true" 
+          type="number" 
+          placeholder="Lbs" 
+          [(ngModel)]="set.weight"
+          (ionChange)="updateSet()">
+        </ion-input>
       </ion-item>
     </ion-col>
     <ion-col>
       <ion-item>
         <ion-icon size="small" name="walk-outline"></ion-icon>
-        <ion-input [clearOnEdit]="true" type="number" placeholder="RPE"></ion-input>
+        <ion-input 
+          [clearOnEdit]="true" 
+          type="number"
+          placeholder="RPE" 
+          [(ngModel)]="set.rpe"
+          (ionChange)="updateSet()">
+        </ion-input>
       </ion-item>
     </ion-col>
 
